--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nes.css": "^2.3.0"
+    "nes.css": "^2.3.0",
+    "typed.js": "^2.0.11"
   }
 }
